# kimi-vision-mcp

./: .gitignore  README.md  install.ps1  install.py  install.sh  pyproject.toml  requirements.txt  server.py
.claude-plugin/: plugin.json
docs/: architecture.md  development.md  tools.md
evals/: vision_eval.xml
skills/: setup.md
src/: config.py  kimi_config.py  media.py  prompts.py
src/providers/: __init__.py  base.py  kimi_acp.py  moonshot.py
src/video/: __init__.py  analyzer.py
src/vision/: __init__.py  tools.py
tests/: test_config.py  test_kimi_config.py  test_media.py  test_prompts.py  test_providers.py  test_server.py  test_video_analyzer.py  test_vision_tools.py
