[project]
name = "video-analyzer-mcp"
version = "2.0.0"
description = "Vision-enabled MCP server powered by Kimi API for Claude Code/Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
